--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Kushajveer Singh
+description: Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning
 github_username: KushajveerSingh
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
@@ -39,11 +39,11 @@ baseurl: "/blog" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: Kkushaj
+    github: KushajveerSingh
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: true
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
@@ -55,7 +55,7 @@ show_image: false
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: 
+google_analytics: UA-123402359-3
 
 exclude:
   - docker-compose.yml
@@ -94,7 +94,7 @@ plugins:
 
 # See https://jekyllrb.com/docs/pagination/
 # For pagination to work, you cannot have index.md at the root of your repo, instead you must rename this file to index.html
-paginate: 15
+paginate: 1000
 paginate_path: /page:num/
 
 remote_theme: jekyll/minima
