--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Kushajveer Singh
-description: Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning
+description: Intersted in applying Graph Machine Learning to solve intersting problems.
 github_username: KushajveerSingh
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
@@ -50,6 +50,9 @@ show_description: true
 
 # Set this to true to display image previews on home page, if they exist
 show_image: false
+
+# Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
+annotations: true
 
 # Set this to true to display tags on each post
 show_tags: true
