--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Kushajveer Singh
-description: Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.
+description: Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.
 github_username: KushajveerSingh
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
